Fix styling of icons on mobile screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 #game-area {
-    padding: 1rem 0 2rem 0;
+    padding: 2rem;
     position: relative;
 }
 
